[package]
name = "keyviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[profile.release]
opt-level = 2

[[bin]]
name = "kv"
path = "src/main.rs"
